feet: Add Cloudinary configuration and update image handling across views

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,9 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+CLOUDINARY_URL=cloudinary://API_KEY:API_SECRET@CLOUD_NAME
+CLOUDINARY_UPLOAD_PRESET=your_upload_preset
+CLOUDINARY_KEY=
+CLOUDINARY_SECRET=
+CLOUDINARY_CLOUD_NAME=
