feat: update about page to display team members with images and details

--- a/vercel.json
+++ b/vercel.json
@@ -57,16 +57,16 @@
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie",
         "DB_CONNECTION": "mysql",
-        "DB_HOST": "",
-        "DB_PORT": "",
-        "DB_DATABASE": "",
-        "DB_USERNAME": "",
+        "DB_HOST": "mysql-39cafa10-kerofrostdiamond415-7145.c.aivencloud.com",
+        "DB_PORT": "16083",
+        "DB_DATABASE": "db_hello_english",
+        "DB_USERNAME": "avnadmin",
         "DB_PASSWORD": "",
-        "CLOUDINARY_URL": "cloudinary://API_KEY:API_SECRET@CLOUD_NAME",
-        "CLOUDINARY_UPLOAD_PRESET": "your_upload_preset",
+        "CLOUDINARY_URL": "cloudinary://464199373218188:L0NPYw4Vw4tUd9gZZZQIHZftx30@dsdsulwlu",
+        "CLOUDINARY_UPLOAD_PRESET": "hello_english",
         "CLOUDINARY_NOTIFICATION_URL": "",
-        "CLOUDINARY_KEY": "",
-        "CLOUDINARY_SECRET": "",
+        "CLOUDINARY_KEY": "464199373218188",
+        "CLOUDINARY_SECRET": "L0NPYw4Vw4tUd9gZZZQIHZftx30",
         "CLOUDINARY_SECURE": "true",
         "CLOUDINARY_PREFIX": ""
     },
